finalizacao autenticacao e autorizacao